fix spacing at bottom of receipts index

--- a/app/assets/stylesheets/components/_side-bar.scss
+++ b/app/assets/stylesheets/components/_side-bar.scss
@@ -153,3 +153,7 @@ body{
 #user-name {
   font-weight: 900;
 }
+
+#trip-show-spacer {
+  height: 4rem;
+}
